--- a/Project/style.css
+++ b/Project/style.css
@@ -1,5 +1,15 @@
 #card-container{
     display: flex;
     flex-direction: row;
-
 }
+
+.card img{
+    
+    height: 200px;
+    width: 200px;
+}
+
+.card{
+    margin: 15px;
+}
+ 
